--- a/force-app/main/default/classes/GetMetadataXmlBatch.cls
+++ b/force-app/main/default/classes/GetMetadataXmlBatch.cls
@@ -1,55 +1,50 @@
 public class GetMetadataXmlBatch
     implements Database.Batchable<String>, Database.AllowsCallouts, Database.Stateful {
 
+    public class MetadataXmlBatchException extends Exception {}
+
     private List<String> unprocessedFiles = new List<String>();
     private List<String> timedOutFiles = new List<String>();
     private Map<String, Datetime> lastSavedDatetimes = new Map<String, Datetime>();
-    private String sessionId; // probably get rid of this
+    private String sessionId;
     private String metadataType;
     private MetadataXmlBatchHelper helper;
 
-    // we're probably NOT going to pass the sessionId to the batch
-    public GetMetadataXmlBatch(String sessionId, String metadataType) {
-        this.isRetry = false;
-        this.sessionId = sessionId;
+    public GetMetadataXmlBatch(List<String> sessionIdParts, String metadataType) {
+        this.sessionId = sessionIdParts[0] + '!' + sessionIdParts[1];
         this.metadataType = metadataType;
-        this.helper = new MetadataXmlBatchHelper(sessionId, metadataType); // probably need to move this start()
+        this.helper = new MetadataXmlBatchHelper(this.sessionId, this.metadataType);
     }
 
     public List<String> start(Database.BatchableContext ctx) {
-        if (this.isRetry) return retryFiles;
-
         return this.helper.getItemsToUpdate();
     }
 
     public void execute(Database.BatchableContext ctx, List<String> encodedFullNames){
         system.debug(encodedFullNames);
+
         // by design, there should only ever be a single chunk (ie, a single list of profile fullNames)
         if (encodedFullNames.size() != 1) {
             system.debug('trying to process ' + encodedFullNames.size() + 'profiles.');
             return;
         }
-        
+        String encodedFullName = encodedFullNames[0];
+
         ReadMetadataApi readMetadataApi = new ReadMetadataApi(this.sessionId, this.metadataType, encodedFullNames);
-        system.debug(Limits.getHeapSize());
         try {
             String xml = readMetadataApi.executeRequest();
-        } catch (CalloutException e) {
+            String fileName = MetadataXmlBatchHelper.getFileName(encodedFullName);
+            String url = S3Repository.getS3SignedUrl(this.metadataType, fileName);
+            S3Repository.putXmlToS3(url, xml);
+            lastSavedDatetimes.put(encodedFullName, Datetime.now());
+        } catch (SoapApi.SoapApiException e) {
             // if read timed out, then add to timedOutFiles list and alert that it's too big
 
             // if invalid_grant (expired refresh token), then add to unprocessedFiles list
             // i don't think this should ever happen
-        } catch (Exception e) {
-            this.unprocessedFiles.add(encodedFullNames[0]);
-        }
-        system.debug(Limits.getHeapSize());
-
-        String fileName = MetadataXmlBatchHelper.getFileName(encodedFullNames[0]);
-        String url = S3Repository.getS3PresignedUrl(this.metadataType, fileName);
-        try {
-            S3Repository.putXmlToS3(url, xml);
-        } catch (Exception e) { // TODO:create a new S3RepositoryException
-            this.unprocessedFiles.add(encodedFullNames[0]);
+            this.unprocessedFiles.add(encodedFullName);
+        } catch (S3Repository.S3RepositoryException e) {
+            this.unprocessedFiles.add(encodedFullName);
         }
     }
 
@@ -61,5 +56,12 @@ public class GetMetadataXmlBatch
         if (!this.timedOutFiles.isEmpty()) {
             MetadataXmlBatchHelper.markTooBig(this.metadataType, this.timedOutFiles);
         }
+
+        // TODO: add unprocessedFiles handling
+    }
+
+    class Parameters {
+        String sessionId;
+        String metadataType;
     }
 }
