--- a/force-app/main/default/classes/ReadMetadataApi.cls
+++ b/force-app/main/default/classes/ReadMetadataApi.cls
@@ -1,4 +1,4 @@
-public class ReadMetadataApi extends SOAPApi {
+public class ReadMetadataApi extends MetadataService {
     private String metadataType;
     private List<String> fullNames;
 
